<resources>
    <string name="app_name">Counter App</string>
    <string name="_42">42</string>
    <string name="todo">TODO</string>
    <string name="enter_the_count">Enter the Count Number</string>
    <string name="submit">Submit</string>
    <string name="select_a_starting_random_number">select a starting random Number</string>
    <string name="incement">+</string>
    <string name="decrement">-</string>
    <string name="inc_dec">Enter Steps</string>
    <string name="currnet_operation">Your current operation will be displayed here</string>
</resources>