<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/padding_10dp"
    tools:context=".MainActivity"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/iv_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_50dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_number" />

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_50dp"
        android:layout_marginBottom="@dimen/margin_50dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/_42"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_72sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <EditText
            android:id="@+id/et_input_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_5dp"
            android:layout_weight="2"
            android:autofillHints=""
            android:fontFamily="@font/audiowide"
            android:hint="@string/enter_the_count"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_number_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/C_Blue"
            android:fontFamily="@font/audiowide"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_random_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_10dp"
        android:layout_marginBottom="@dimen/padding_10dp"
        android:backgroundTint="@color/C_Blue"
        android:fontFamily="@font/audiowide"
        android:text="@string/select_a_starting_random_number"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/bt_decrement_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/r_ruby"
            android:fontFamily="@font/audiowide"
            android:text="@string/decrement"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_diff_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_5dp"
            android:layout_marginEnd="@dimen/margin_5dp"
            android:layout_weight="3"
            android:autofillHints=""
            android:textAlignment="center"
            android:fontFamily="@font/audiowide"
            android:hint="@string/_1"
            android:inputType="numberSigned"
            android:textColor="@color/r_ruby"
            android:textColorHint="@color/r_ruby"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/bt_increment_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/r_ruby"
            android:fontFamily="@font/audiowide"
            android:text="@string/incement"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_summary_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_50dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/currnet_operation"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>